--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/cli": "^21.0.0-rc.1",
     "@angular/compiler-cli": "^21.0.0-next.0",
     "jsdom": "^27.0.0",
+    "turbo": "^2.6.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.0"
   }
