--- a/apps/web/tsconfig.app.json
+++ b/apps/web/tsconfig.app.json
@@ -7,9 +7,9 @@
     "types": []
   },
   "include": [
-    "src/**/*.ts"
+    "apps/src/**/*.ts"
   ],
   "exclude": [
-    "src/**/*.spec.ts"
+    "apps/src/**/*.spec.ts"
   ]
 }
