--- a/apps/angular-turbo-v21/package.json
+++ b/apps/angular-turbo-v21/package.json
@@ -23,19 +23,19 @@
   "private": true,
   "packageManager": "npm@10.8.2",
   "dependencies": {
-    "@angular/common": "^21.0.0-next.0",
-    "@angular/compiler": "^21.0.0-next.0",
-    "@angular/core": "^21.0.0-next.0",
-    "@angular/forms": "^21.0.0-next.0",
-    "@angular/platform-browser": "^21.0.0-next.0",
-    "@angular/router": "^21.0.0-next.0",
+    "@angular/common": "^20.0.0",
+    "@angular/compiler": "^20.0.0",
+    "@angular/core": "^20.0.0",
+    "@angular/forms": "^20.0.0",
+    "@angular/platform-browser": "^20.0.0",
+    "@angular/router": "^20.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/build": "^21.0.0-rc.1",
-    "@angular/cli": "^21.0.0-rc.1",
-    "@angular/compiler-cli": "^21.0.0-next.0",
+    "@angular/build": "^20.0.0",
+    "@angular/cli": "^20.0.0",
+    "@angular/compiler-cli": "^20.0.0",
     "jsdom": "^27.0.0",
     "turbo": "^2.6.0",
     "typescript": "~5.9.2",
